--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -162,23 +162,29 @@
 			  margin-left: 10px;
 		  }
 
-	   	button.upgrade{
+	   	.button {
+			padding: 10px 12px;
 			display: flex;
 			flex-direction: row;
 			align-items: center;
-			width: 130px;
-			height: 30px;
+			width: max-content;
+			height: 40px;
+			font-size: 14px;
 			//top: 160px;
 			margin-left: 13px;
 			margin-top: 13px;
-			 //padding: 6px 6px 6px 2px;
 			background: #ED332B;
 			//background: #ED3; // just for check ctrl+shift reload worked :)
+			&:hover {
+				background: lighten(#ED332B, 10%);
+				//transform: scale(1.05);
+			}
 
 	  }
 		.shortpixel-icon.cart{
 			height: 18px;
 			width: 18px;
+			margin-right: 8px;
 		}
 
   }
