--- a/res/scss/bulk/_dashboard.scss
+++ b/res/scss/bulk/_dashboard.scss
@@ -41,7 +41,7 @@
 
               &:hover {
                 background: lighten($blue_default, 10%);
-                transform: scale(1.02);
+                //transform: scale(1.02);
               }
 
                &:disabled {
