Wip / Power precaution

--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -28,9 +28,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 95%;
   margin: 10px auto;
-  border-radius: 16px;
 }
 .wrap.is-shortpixel-bulk-page header h1 {
   line-height: 50px;
@@ -227,7 +225,7 @@
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button:hover {
-  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
+  background: #32d7e5;
 }
 .wrap.is-shortpixel-bulk-page section.panel.dashboard .bulk-wrapper button:disabled {
   color: #ccc;
@@ -355,7 +353,7 @@
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-bulk-page .button-primary:hover {
-  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
+  background: #32d7e5;
 }
 .wrap.is-shortpixel-bulk-page nav {
   margin: 45px auto;
@@ -557,7 +555,7 @@
   transition: all 900ms;
 }
 .wrap.is-shortpixel-bulk-page .processor-paused:hover {
-  background: rgb(27.5926724138, 169.1163793103, 178.9073275862);
+  background: #1ca9b3;
 }
 .wrap.is-shortpixel-bulk-page .processor-paused .dashicons {
   margin-right: 6px;
@@ -1194,7 +1192,7 @@
   transition: all 0.5s ease;
 }
 .wrap.is-shortpixel-bulk-page section.panel.finished nav button.finish:hover {
-  background: rgb(36.2392241379, 209.2887931034, 221.2607758621);
+  background: #24d1dd;
 }
 .wrap.is-shortpixel-bulk-page .part-debug {
   background: #000;
