--- a/res/scss/elements/_header.scss
+++ b/res/scss/elements/_header.scss
@@ -7,9 +7,9 @@ header
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 95%;
+  //  width: 95%;
     margin: 10px auto;
-    border-radius: 16px;
+//    border-radius: 16px; // Full radius not according design / ugly? 
 //    margin-left: -22px;
 //    margin-top: -10px;
 //    margin-right: -22px;
