--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -102,9 +102,7 @@ div.spio-modal-title {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 95%;
   margin: 10px auto;
-  border-radius: 16px;
 }
 .wrap.is-shortpixel-settings-page header h1 {
   line-height: 50px;
@@ -302,7 +300,7 @@ div.spio-modal-title {
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-settings-page .shortpixel-settings button:hover, .wrap.is-shortpixel-settings-page .shortpixel-settings .button-setting:hover {
-  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
+  background: #32d7e5;
 }
 .wrap.is-shortpixel-settings-page .shortpixel-settings button i.switch, .wrap.is-shortpixel-settings-page .shortpixel-settings .button-setting i.switch {
   width: 18px;
@@ -315,8 +313,9 @@ div.spio-modal-title {
 }
 .wrap.is-shortpixel-settings-page .shortpixel-settings menu {
   width: 25%;
-  max-width: 200px;
+  max-width: 220px;
   padding-left: 25px;
+  box-sizing: border-box;
 }
 .wrap.is-shortpixel-settings-page .shortpixel-settings menu ul {
   list-style: none;
@@ -422,6 +421,59 @@ div.spio-modal-title {
   grid-template-columns: 70% 30%;
   column-gap: 50px;
 }
+.wrap.is-shortpixel-settings-page .shortpixel-settings gridbox.width_60 {
+  grid-template-columns: 60% 40%;
+  column-gap: 5%;
+}
+@media (max-width: 1200px) {
+  .wrap.is-shortpixel-settings-page .shortpixel-settings {
+    width: 100%;
+  }
+  .wrap.is-shortpixel-settings-page .shortpixel-settings menu div.adv_switcher {
+    font-size: 14px;
+  }
+  .wrap.is-shortpixel-settings-page .shortpixel-settings section.wrapper {
+    width: 85%;
+    margin-left: 3%;
+  }
+}
+@media (max-width: 768px) {
+  .wrap.is-shortpixel-settings-page header {
+    position: fixed;
+    top: 46px;
+    width: 100%;
+    height: 65px;
+    margin-top: 0;
+    left: 0;
+  }
+  .wrap.is-shortpixel-settings-page header h1 img {
+    height: 35px;
+    margin-left: 45px;
+  }
+  .wrap.is-shortpixel-settings-page .wp-header-end {
+    margin-top: 65px;
+  }
+  .wrap.is-shortpixel-settings-page .shortpixel-settings .mobile-menu input:checked + menu {
+    display: block;
+  }
+  .wrap.is-shortpixel-settings-page .shortpixel-settings .mobile-menu input:checked {
+    border: 1px solid #000;
+  }
+  .wrap.is-shortpixel-settings-page .shortpixel-settings menu {
+    position: absolute;
+    left: 0;
+    top: 65px;
+    z-index: 10;
+    background: #fff;
+    padding: 8px;
+    max-width: none;
+    width: auto;
+    margin-top: 0;
+  }
+  .wrap.is-shortpixel-settings-page .shortpixel-settings section.wrapper {
+    width: 95%;
+  }
+}
 .wrap.is-shortpixel-settings-page .setting-tab .shortpixel-compression-options label.lossy span {
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
@@ -439,7 +491,7 @@ div.spio-modal-title {
   display: inline-block;
 }
 .wrap.is-shortpixel-settings-page .setting-tab .shortpixel-compression-options label {
-  width: 158px;
+  width: 30%;
   font-weight: bold;
   display: inline-block;
   margin-right: 1px;
@@ -543,6 +595,15 @@ div.spio-modal-title {
 .wrap.is-shortpixel-settings-page .setting-tab .resize-type-wrap label {
   display: inline-block;
   padding: 15px 0 0 0;
+}
+@media (max-width: 1100px) {
+  .wrap.is-shortpixel-settings-page .setting-tab gridbox {
+    display: block;
+  }
+  .wrap.is-shortpixel-settings-page .setting-tab .smart-compression-explainer {
+    width: auto;
+    margin: 20px 0 12px;
+  }
 }
 .wrap.is-shortpixel-settings-page a {
   color: #0f6a7d;
@@ -683,6 +744,13 @@ div.spio-modal-title {
   height: 18px;
   width: 18px;
   margin-right: 8px;
+}
+@media (max-width: 1200px) {
+  .wrap.is-shortpixel-settings-page .upgrade-banner {
+    max-width: 200px;
+    width: 100%;
+    margin: 0;
+  }
 }
 .wrap.is-shortpixel-settings-page .red {
   color: #ff0000;
@@ -883,13 +951,14 @@ div.spio-modal-title {
 .wrap.is-shortpixel-settings-page #tab-help .help-center {
   background: #F4FBFC;
   border-radius: 8px;
-  padding: 18px;
+  width: 100%;
   display: flex;
 }
 .wrap.is-shortpixel-settings-page #tab-help .help-center > div {
   border-right: 2px solid #92D5E3;
-  margin: 0 10px;
+  margin: 16px 10px;
   display: flex;
+  padding: 0 4px;
   flex-direction: column;
   align-items: center;
   width: 33%;
@@ -899,8 +968,43 @@ div.spio-modal-title {
 .wrap.is-shortpixel-settings-page #tab-help .help-center > div .main-icon .icon {
   width: 40px;
 }
+.wrap.is-shortpixel-settings-page #tab-help .help-center > div p {
+  min-height: 60px;
+}
 .wrap.is-shortpixel-settings-page #tab-help .help-center > div:last-child {
   border: 0;
+}
+.wrap.is-shortpixel-settings-page #tab-overview {
+  /*
+  @include breakpoint(0, 1050px)
+  {
+          .wrapper.top-row {
+             flex-direction: column;
+             .first-panel.panel {
+               width: 100%;
+               i.cocktail { display: none; }
+             }
+             .second-panel.panel {
+               width: 100%;
+               margin-top: 8px;
+               display: block;
+               .rating {
+                 float: left;
+               }
+             }
+          }
+          .wrapper.middle-row {
+             flex-direction: column;
+             > .panel {
+               margin-top: 12px;
+               width: 100%;
+               flex-direction: row;
+               i { float: left; }
+               .dashboard-button { display: none; }
+             }
+          }
+
+  } */
 }
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper {
   display: flex;
@@ -924,7 +1028,7 @@ div.spio-modal-title {
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper .dashboard-button:hover {
-  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
+  background: #32d7e5;
 }
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper .dashboard-button i.switch {
   width: 18px;
@@ -991,9 +1095,12 @@ div.spio-modal-title {
   height: 75px;
 }
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .second-panel {
-  display: flex;
-  flex-direction: column;
   width: 30%;
+  display: block;
+  text-align: center;
+}
+.wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .second-panel h4 {
+  font-size: 1.2em;
 }
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .average-optimization .opt-circle-average {
   width: 150px;
@@ -1003,9 +1110,7 @@ div.spio-modal-title {
   dominant-baseline: central;
 }
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .rating {
-  display: flex;
-  justify-content: space-between;
-  width: 70%;
+  display: block;
   margin: 0 0 10px 0;
 }
 .wrap.is-shortpixel-settings-page #tab-overview .wrapper.top-row .rating img {
@@ -1524,7 +1629,7 @@ div.spio-modal-title {
 .wrap.is-shortpixel-settings-page #tab-tools .button {
   min-height: 44px;
   color: #1ABDCA;
-  background-color: rgb(232.25, 232.25, 232.25);
+  background-color: #e8e8e8;
   border-radius: 6px;
   font-weight: 700;
   letter-spacing: 0.3px;
@@ -1532,7 +1637,7 @@ div.spio-modal-title {
   transition: all 0.1s ease-in-out;
 }
 .wrap.is-shortpixel-settings-page #tab-tools .button:hover {
-  background: rgb(50.3421052632, 215.4868421053, 228.6578947368);
+  background: #32d7e5;
   color: #fff;
 }
 .wrap.is-shortpixel-settings-page #tab-tools .option, .wrap.is-shortpixel-settings-page #tab-tools setting {
