--- a/res/scss/elements/_header.scss
+++ b/res/scss/elements/_header.scss
@@ -7,14 +7,15 @@ header
     display: flex;
     justify-content: space-between;
     align-items: center;
-  //  width: 95%;
+//    width: 95%;
     margin: 10px auto;
-//    border-radius: 16px; // Full radius not according design / ugly? 
-//    margin-left: -22px;
-//    margin-top: -10px;
-//    margin-right: -22px;
-//    margin-bottom: 10px;
-//    padding: 8px 16px;
+//    border-radius: 16px;
+    margin-left: -22px;
+    margin-top: -10px;
+    margin-right: -22px;
+    margin-bottom: 10px;
+    padding: 8px 16px;
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
 
     h1 {
       line-height: 50px;
@@ -23,7 +24,7 @@ header
       vertical-align: bottom;
       padding-bottom: 5px;
       margin-right: 8px;
-//      margin-left: 1.1em;
+      margin-left: 1.1em;
     }
 		.top-buttons
 		{
@@ -32,12 +33,18 @@ header
 			button {
 					color: #fff;
 					background: $blue_default;
-					padding: 8px 6px;
+					padding: 10px 12px;
 					border: 0;
 					margin: 4px; // see if this works.
 					font-family: 'Roboto';
 					font-weight: 700;
 					border-radius: 6px;
+					i.user {
+						width: 15px;
+						height: 15px;
+						vertical-align: text-top;
+						filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(20%) hue-rotate(283deg) brightness(105%) contrast(105%);
+					}
 					i.switch {
 						 width: 18px;
 						 height: 12px;
